logo name changed

--- a/practice1.html
+++ b/practice1.html
@@ -14,7 +14,7 @@
             <div class="nav">
                 <div class="logo">
                     <img src="pic/Group.png" >
-                    <h3 class="logo">Flowa</h3>
+                    <h3 class="logo">Flowrence</h3>
                 </div>
                 <div class="menu">
                     <ul>
